--- a/docs/sna_lecture_site.Rmd
+++ b/docs/sna_lecture_site.Rmd
@@ -45,17 +45,17 @@ net_url11 = "https://raw.githubusercontent.com/Epsian/sna_lecture/main/resources
 net_url12 = "https://raw.githubusercontent.com/Epsian/sna_lecture/main/resources/2_step.png"
 ```
 
-# Overview
+## Overview
 
 This reader will introduce the theoretical and logistical underpinnings of network analysis. It will define what networks are, their limitations, and their use cases. It will then cover some of the most commonly used network measures, what they mean, and how to generate them.
 
-## While you wait
+### While you wait
 
--   Make sure you have installed all the packages you will need: `install.packages(c("statnet", "visNetwork", "learnr"))`
--   Download the data and class code-along from Canvas
+-   Make sure you have installed all the packages you will need: `install.packages(c("statnet", "visNetwork"))`
+-   Download the data from Canvas
 -   Play around with the [Oracle of Bacon](https://oracleofbacon.org/)
 
-## Learning Objectives
+### Learning Objectives
 
 By the end of this class meeting, students should be able to:
 
@@ -64,7 +64,7 @@ By the end of this class meeting, students should be able to:
 -   Understand the shortcomings and limitations of network analysis.
 -   Evaluate a network dataset and interpret the generated metrics.
 
-## Roadmap
+### Roadmap
 
 -   What is Social Network Analysis (SNA)
 -   Examples of networks in research
@@ -74,7 +74,7 @@ By the end of this class meeting, students should be able to:
 -   Network Tools
 -   Guided Homework Start/Question Time
 
-# What is Network Analysis
+## What is Network Analysis
 
 You are all most likely familiar now with tabular data; rows and columns containing information. It looks like this:
 
@@ -104,7 +104,7 @@ visNetwork(nodes, edges, width = "100%") %>%
 
 Rather than looking only at attributes of specific data points, we are looking at the connections between data. In network analysis, data points are called *nodes* or *vertices*, and the connections between them are called *edges* or *ties*. Vertices can be anything---people, places, words, concepts---they are usually mapped into rows in a data frame. Edges contain any information on how these things connect or are related to each other. These components create a *network* or *graph*, defined as "finite set or sets of actors and the relation or relations defined on them" [@wassermanSocialNetworkAnalysis1994].
 
-## Networks in research - Social Sciences
+### Networks in research - Social Sciences
 
 ```{r echo=FALSE, out.width= "25%", out.extra='style="float:right; padding:10px"'}
 knitr::include_graphics(net_url5)
@@ -112,7 +112,7 @@ knitr::include_graphics(net_url5)
 
 One of the first instances of social network analysis was originally published in 1932 as part of Jacob Moreno's *Who Shall Survive* [-@morenoWhoShallSurvive1953]. This study used the friendship networks of girls within a reform school to show that the ties between them were a stronger predictor of runaways than any attribute of the girls themselves. Since then, networks have been used widely in the social sciences, but only really picked up as the tools to understand SNA became more available.
 
-## Networks in research - Neuroscience
+### Networks in research - Neuroscience
 
 ```{r echo=FALSE, out.width= "25%", out.extra='style="float:right; padding:10px"'}
 knitr::include_graphics(net_url6)
@@ -120,7 +120,7 @@ knitr::include_graphics(net_url6)
 
 Neuroscientists use networks to study the brain, given their ready application to neurons and pathways. Bassett and Sporns [-@bassettNetworkNeuroscience2017] provide an overview of how to translate neuroscience problems into network ones, and the tools available to study them.
 
-## Networks in research - Chemistry
+### Networks in research - Chemistry
 
 ```{r echo=FALSE, out.width= "25%", out.extra='style="float:right; padding:10px"'}
 knitr::include_graphics(net_url7)
@@ -128,7 +128,7 @@ knitr::include_graphics(net_url7)
 
 Chemistry was quick to see the applications of networks. As early at 1985 papers were published detailing the potential networks provided in terms of understanding and finding new ways to measure and understand the bonds between atoms and molecules [@balabanApplicationsGraphTheory1985].
 
-## Networks in research - The Internet
+### Networks in research - The Internet
 
 ```{r echo=FALSE, out.width= "25%", out.extra='style="float:right; padding:10px"'}
 knitr::include_graphics(net_url8)
@@ -136,7 +136,7 @@ knitr::include_graphics(net_url8)
 
 The internet is a network! Beyond the various social network sites, servers themselves act as nodes and the information flows between them along edges. Google used this property in the first version of their search engine, which used the network metric of PageRank to determine which sites to show at the top of search results [@pageMethodNodeRanking2001].
 
-## Networks in research - Infrastructure
+### Networks in research - Infrastructure
 
 ```{r echo=FALSE, out.width= "25%", out.extra='style="float:right; padding:10px"'}
 knitr::include_graphics(net_url9)
@@ -144,7 +144,7 @@ knitr::include_graphics(net_url9)
 
 Fand and Mostafavi [-@fanGraphbasedMethodSocial2019] showed how you can use social media network data to find where infrastructure is failing during disasters, such as hurricane Harvey in 2017. Their system promises a method to monitor physical infrastructure like roads, bridges, and barriers like more easily monitored infrastructure like the electrical grid.
 
-## Networks in research - Security
+### Networks in research - Security
 
 ```{r echo=FALSE, out.width= "25%", out.extra='style="float:right; padding:10px"'}
 knitr::include_graphics(net_url10)
@@ -152,11 +152,11 @@ knitr::include_graphics(net_url10)
 
 Network analysis has also been used for offensive purposes. One of the most prominent uses is mapping crime or terror networks [@krebsMappingNetworksTerrorist2002], though it is fraught with ethical concerns. There are specific tools made for this purpose, such as the *keyplayer* package [@anKeyplayerPackageLocating2016], which helps find what nodes in a network would fragment them the most if removed.
 
-# Network Data
+## Network Data
 
 Networks are based on relational data. This means the core data requirement is that we have some measure of how nodes are connected. The two most common network data formats are the *edgelist* and *adjacency matrix*. Either of these will work for nearly any network purpose, and it is easy to convert between them. You will also need an *attributes* file, which gives information about the nodes being connected.
 
-## Edgelist
+### Edgelist
 
 An edgelist is a two-column dataframe with a *from* and *to* column. Each row represents one edge or tie, with the possibility of adding in more information. Here is an example of a basic edgelist. Let's load in the example data you downloaded and look at some of it. 
 
@@ -168,19 +168,21 @@ toy_edgelist = read.csv("./data/toy_edgelist.csv", header = TRUE, stringsAsFacto
 kable(head(toy_edgelist, n = 10))
 ```
 
-## Adjacency Matrix
+### Adjacency Matrix
 
 The same data can also be displayed in a table format. The information is the same, but it is presented in a way more usable by our code to create measures we care out. In this format, every node has both a row and column. If there is an edge between two nodes, a 1 is placed in the intersection of their row and column.
 
 ```{r echo=FALSE}
-knitr::kable(as.matrix(network(head(toy_edgelist, n = 10))))
+.tab = knitr::kable(as.matrix(network(head(toy_edgelist, n = 10))), format =
+  "html")
+kableExtra::scroll_box(.tab, width = "770px")
 ```
 
-## Edge Weights
+### Edge Weights
 
 Edges can also have weights, meaning some edges are valued more than others. In an edgelist, you can add a third "weight" column, entering higher numbers to denote a more important connection. In an adjacency matrix, you can put numbers other than 1 in the intersection to denote more important connections. For our example, we'll stick with un-weighted connections for now.
 
-## Attributes
+### Attributes
 
 Each network also typically has an attributes table, which looks just like typical tabular data, with each row belonging to a specific node in our network. Let's load in and look at the sample attributes file.
 
@@ -192,7 +194,7 @@ toy_attributes = read.csv("./data/toy_attributes.csv", header = TRUE, stringsAsF
 kable(head(toy_attributes, n = 10))
 ```
 
-## Create an Example Network
+### Create an Example Network
 
 Before we start exploring specific measures, we'll create a toy network to use as an example. Let's start by loading in some packages.
 
@@ -262,7 +264,7 @@ visNetwork(nodes = toy_attributes, edges = toy_edgelist) %>% visInteraction(zoom
 
 Nice.
 
-## Components
+### Components
 
 Most often when working with networks you want to limit your analysis to one cluster or *component*, typically the largest one in your network. If segments of your network aren't connected, you can't answer many of the relational questions network analysis is good for! Let's limit our network to the largest component:
 
@@ -280,11 +282,11 @@ toy_edgelist = toy_edgelist[which(toy_edgelist$to %in% toy_attributes$id | toy_e
 visNetwork(nodes = toy_attributes, edges = toy_edgelist) %>% visInteraction(zoomView = FALSE)
 ```
 
-## Limitations of Network Data
+### Limitations of Network Data
 
 Before we move on we should take a moment to talk about some the the caveats when using network data. While powerful, network analysis is particularly picky when in comes to data requirements. I'll cover the two biggest ones below. You should *always* keep these in mind when using or interpreting network tools.
 
-### Missing Data
+#### Missing Data
 
 Network analysis is very vulnerable to missing data. A simple way to understand why is to make a small adjustment to our network. I've highlighted one node in green. This node is structurally vital to the network; without it, the shape of the network as a whole will change.
 
@@ -314,7 +316,7 @@ If we remove this node, the network changes in a major way! Imagine these nodes 
 visNetwork(nodes = .vul_att[.vul_att$color != "green",], edges = .vul_edge) %>% visInteraction(zoomView = FALSE)
 ```
 
-### Network Boundaries
+#### Network Boundaries
 
 Network analysis is all about looking at the relationships between entities. However, following all connections an entity has can quickly spiral out of hand. For example, if you wanted to map your own social network, where would you start? You would include yourself, then your friends and family, but what about after that? Your friends and family have friends and family, as do their friends and family, as do their ... and so on. If you are looking at human networks, *every* human will be included if you look far enough, so how do you decide when to stop?
 
@@ -326,7 +328,7 @@ Another common method is setting an arbitrary number of "steps" or connections f
 knitr::include_graphics(net_url12)
 ```
 
-## Projected Networks
+### Projected Networks
 
 Often, you will not have individual level network data, but you will have data on group membership. For example, if you wanted to map the social networks of student, but don't know who they actually hang around with, you may be able to use class rosters to build an approximate network. This is call a *bipartite network*, *two-mode*, or *projected network*. You can see an example below.
 
@@ -338,7 +340,7 @@ knitr::include_graphics(net_url11)
 
 For reference, this is what out projected class network looks like:
 
-```{r echo=FALSE, out.width= "100%"}
+```{r projected, echo=FALSE, out.width= "100%"}
 # load in projected edgelist
 class_edges = read.csv("./data/toy_projected.csv", header = TRUE, stringsAsFactors = FALSE)
 class_attributes = read.csv("./data/toy_attributes.csv", header = TRUE, stringsAsFactors = FALSE)
@@ -351,7 +353,7 @@ class_attributes = read.csv("./data/toy_attributes.csv", header = TRUE, stringsA
 visNetwork(nodes = .projected_df, edges = class_edges) %>% visInteraction(zoomView = FALSE)
 ```
 
-# Graph Level Properties
+## Graph Level Properties
 
 Now that we know what networks are and have some examples of how they are used and the data required, let's get into actually analyzing them. There are a number of measures we can compute to understand the structure of a network as a whole. We will go over some basic network level ones here. These are single measures or attributes used to describe the entire network, and can be used to compare one network against another.
 
@@ -359,7 +361,7 @@ Now that we know what networks are and have some examples of how they are used a
 * Density
 * Centralization
 
-## Directed or Un-directed
+### Directed or Un-directed
 
 Networks can either be *directed* or *un-directed*. A directed network treats the edges between nodes as having a specific direction of flow, while an un-directed network considers all edges to be mutual. An example of each is presented below.
 
@@ -388,7 +390,7 @@ visNetwork(toy_attributes, toy_edgelist, main = "Un-directed") %>% visInteractio
 
 Which of these will be useful to you will likely change from project to project. However, it is vital to understand what kind of network you are working with, as many network calculations we will talk about later change their behavior based on if the network is directed or not.
 
-## Density
+### Density
 
 *Density* is the first real graph level metric that helps you understand what is particular about the network you are looking at. The density of a network is a numerical score showing how many ties exist in a network, given the max possible in that network. Mathematically that is $\frac{Actual Edges}{Possible Edges}$, where actual edges is the number of edges in the network, and possible edges is the number of edges if every single node in the network was connected to every other node.
 
@@ -404,7 +406,7 @@ visNetwork(toy_attributes, toy_edgelist, main = "High Density") %>% visInteracti
 visNetwork(toy_attributes, toy_edgelist[c(1:5,7,10,13,15),1:2], main = "Low Density") %>% visInteraction(zoomView = FALSE)
 ```
 
-## Centralization
+### Centralization
 
 *Freeman Centralization* (usually just called *centralization*) gives a sense of the shape of the network, namely how node level measures are distributed in a network. We'll discuss node level measures next, but for now it is only important to understand that node level measures are numeric scores assigned to specific nodes rather than the network as a whole. This means that each node may have a different value.
 
@@ -426,7 +428,7 @@ visNetwork(data.frame("id" = 1:6), .star_edge, main = "Star Network") %>% visInt
 visNetwork(data.frame("id" = 1:6), .loop_edge, main = "Loop Network") %>% visInteraction(zoomView = FALSE) %>% visLayout(randomSeed = 2)
 ```
 
-# Node Level Properties
+## Node Level Properties
 
 Node level measures are numeric representations of a node's position and importance in a network. There are several common node level measures, and we will go over some of them here. Each measure tries to quantify a different aspect of a node's position in the network so we can make an argument about why that specific node or class of nodes is important in some way. We will go over:
 
@@ -437,7 +439,7 @@ Node level measures are numeric representations of a node's position and importa
 
 Most node level measures are only helpful within the context of the network they were generated for. This is because the measures are created in part using network level measures like density. This means it is alright to compare one node to another within the same network, but toy should node compare the node level measures between networks.
 
-## Degree
+### Degree
 
 *Degree* counts how many edges are connected to a node. You can count incoming, outgoing, or total (Freeman) degree. Incoming and outgoing degree only matter in directed networks. In un-directed networks, only total edges are applicable. Degree gives a very rough measure of how popular or central a node is in the network. If a node has more ties, it may indicate that node as being more central or important the network as a whole.
 
@@ -460,7 +462,7 @@ toy_attributes$value = degree(toy_network)^2
 visNetwork(toy_attributes, toy_edgelist, main = "Degree Example") %>% visInteraction(zoomView = FALSE)
 ```
 
-## Geodesic Distance
+### Geodesic Distance
 
 **Geodesic Distance** is "the length of the shortest path via the edges or binary connections between nodes" [@kadushinUnderstandingSocialNetworks2012]. In other words, if we treat the network as a map we can move along, with the nodes being stopping places and the edges being paths, the geodesic is the shortest possible path we can use to walk between two nodes. 
 
@@ -506,15 +508,15 @@ visNetwork(toy_attributes, toy_edgelist, main = "Geodesic Example") %>% visInter
 ```
 Note that while there is a correlation between degree counts (node size) and mean geodesic distance, one does not cause the other. This is our first instance of how network structure, not node attributes, can inform us about the nodes in a network. Essentially, looking at the network as a whole can tell us things about the people in it that is lost if we look only at individuals.
 
-## Centrality
+### Centrality
 
 Centrality scores encompass a wide range of measures computed at the node level. Each tries to understand the importance of a single node within the structure of a network by looking at the nodes connection patterns to other nodes. Any centrality measure can be used to create a network level centralization score like we discussed above. We will go through some of the common centrality measures here, but know there are several more we will not cover.
 
-### Betweenness Centrality
+#### Betweenness Centrality
 
-**Betweenness Centrality** is one of the most common centrality measures. It tries to calculate the extent to which a node acts as a gatekeeper or *broker* in the network. A broker bridges two otherwise disconnected segments in a network. If there are two parts of a network that would otherwise be broken apart if a node was removed, that node would have a high betweenness centrality. The fragmenting of a network is not a prerequisite however, simply acting as an effective "shortcut" in a network can also raise a node's betweenness centrality. Betweenness is calculated using geodesic distances, and gives a higher score to nodes that lie on more geodesic paths.
+**Betweenness Centrality** is one of the most common centrality measures. It tries to calculate the extent to which a node acts as a gatekeeper or *broker* in the network. A broker bridges two otherwise disconnected segments in a network. If there are two parts of a network that would otherwise be broken apart if a node was removed, they would have a high betweenness centrality. The fragmenting of a network is not a prerequisite however, simply acting as an effective "shortcut" in a network can also raise a node's betweenness centrality. Betweenness is calculated using geodesic distances, and gives a higher score to nodes that lie on more geodesic paths.
 
-The next network plot shows the size of nodes as their degree, with a label showing their betweenness centrality score. Centrality scores are usually normalized such that their scores all sum to 1. This way, you can easily compare nodes within the network (but not between networks), and understand how nodes relate to each other structurally. It is possible for a node to have a 0 betweenness score if no geodesic distances pass through them.
+The next network plot shows the size of nodes as their degree, with a label showing their betweenness centrality score. Centrality score are usually normalized such that their scores all sum to 1. This way, you can easily compare nodes within the network (but not between networks), and understand how nodes relate to each other structurally. It is possible for a node to have a 0 betweenness score if no geodesic distances pass through them.
 
 Like last time I've colored the nodes so that the node with the highest betweenness centrality is red, while the lowest is blue. Compared to distance however, it is considered advantageous to have a *high* betweenness centrality, as this means that nodes acts as a gatekeeper in the network, which can be a powerful position. Contrast this with having a *low* mean distance, which meant you were closer to all other nodes.
 
@@ -538,7 +540,7 @@ toy_attributes$color[which(toy_network%v%"norm_betweenness" == min(toy_network%v
 visNetwork(toy_attributes, toy_edgelist, main = "Betweenness Centrality Example") %>% visInteraction(zoomView = FALSE)
 ```
 
-### Eigenvector Centrality
+#### Eigenvector Centrality
 
 **Eigenvector Centrality** is commonly known as a measure of "popular friends." Rather than looking at the network position of a node, it looks at the network positions of nodes connected to it. Nodes with a high eigenvector score will be connected to nodes more prominent in the network. Nodes with low degree can have high eigenvector scores if they are connected to important nodes. In real life networks this can be interpreted as being close to influential others in a network.
 
@@ -564,7 +566,7 @@ toy_attributes$color[which(toy_network%v%"evc" == min(toy_network%v%"evc"))] = "
 visNetwork(toy_attributes, toy_edgelist, main = "Eigenvector Centrality Example") %>% visInteraction(zoomView = FALSE)
 ```
 
-# Network Workflow
+## Network Workflow
 
 We have been taking our analyses one step at a time and plotting them. This is useful for learning, but slightly annoying in practice. Below I've aggregated how you would actually run analyses in practice so you can refer to it later.
 
@@ -620,42 +622,42 @@ Finally, we can then look at the network measures for our nodes. This dataframe 
 kable(head(toy_attributes))
 ```
 
-# Network Tools
+## Network Tools
 
 There are several ways to interact with network data in R. Thus far we have been using a combination of `statnet` for analysis and `visNetwork` for visualization. Here we'll gloss over some other tools and what they are used for. Rather than a comprehensive tutorial, this section is just meant to introduce you to what tools are out there so you can investigate them further if you have a need fro them.
 
-## Network Models
+### Network Models
 
-### statnet
+#### statnet
 
 `statnet` is one of the two largest network packages in R. It allows you to create network objects and generate the network measures we've been looking at this far. `statnet`'s claim to fame however is it's ability to run network simulations, called *exponential random graph models (ERGMs)*. These models allow you to keep some aspect of a network constant and generate random networks that fit your specifications. This can help you highlight one structural aspect of a network and prove that, all else being random, it is important. To learn more about ERGMs, see [@robinsIntroductionExponentialRandom2007; @robinsRecentDevelopmentsExponential2007]. [Learn more on the statnet website.](https://statnet.org/)
 
-### igraph
+#### igraph
 
 `igraph` is the other big network package in R. It has more network measures than `statnet`, but less robust simulation capabilities. While the same network concepts you've learned with `statnet` will help you understand all networks, the code syntax for `igraph` is different, so you can't use the two tools interchangeably. Notably, some functions are named the same in `statnet` and `igraph`, so it is advised not to load both at the same time. [Learn more on the igraph website.](https://igraph.org/r/)
 
-### intergraph
+#### intergraph
 
 `intergraph` is a utility package in R to convert between `statnet` and `igraph` network objects. This means you can prepare your data in your package of choice, then convert your network and use what tools you need from the other package.
 
-### tidygraph
+#### tidygraph
 
 `tidygraph` is a relatively new tool in R, built to use tidyverse syntax. It can do many of the same basic network analyses of the two older packages, but lacks the variety of `igraph` or the simulation capability of `statnet`. [Learn more on the tidygraph website.](https://tidygraph.data-imaginist.com/)
 
-## Network Visualization
+### Network Visualization
 
-### Built-in
+#### Built-in
 
 While we avoided it today, all network packages have built in visualization capabilities that can look nice if you work on it. The advantage of these is that you can use the network objects themselves to pull attributes from the networks for your plots (e.g. pull degree centrality for node size).
 
-### visNetwork
+#### visNetwork
 
 `visNetwork` can make some nice interactive network visualizations with relatively simple code. This is great for learning and for exploring networks interactively. However, it does have significant downsides. For one, you have to keep separate dataframes for your edges and attributes as it cannon run directly on network objects. Most importantly it cannot produce static network images! You will most likely need more static plots than interactive ones. If you can only dig deeply into one tool, this one may not be the best to specialize in.
 
-### ggraph
+#### ggraph
 
 `ggraph` uses ggplot syntax to plot networks. There are several packages that do this in various stages of development. To my understanding, `ggraph` is the most recent incarnation still under active development. [Learn more of the ggraph website.](https://ggraph.data-imaginist.com/)
 
 ------------------------------------------------------------------------
 
-# References
+## References
